Fix dotted outline anchor elements and clipped topic toggle icon
Added ng-device-detector to detect browser platform

--- a/app/static/components/snippetbar/snippetbar.less
+++ b/app/static/components/snippetbar/snippetbar.less
@@ -26,7 +26,8 @@
             margin-left: -10px;
             z-index:5100;
         }
-        #toggleIcon a.toggledOn {
+        .browser-chrome #toggleIcon a.toggledOn,
+        .browser-safari #toggleIcon a.toggledOn {
             padding-left: 5px;
         }
         #snippetAdd span.selected {
