--- a/app/static/main.less
+++ b/app/static/main.less
@@ -4,6 +4,10 @@ body {
     padding-top: 50px;
 }
 
+a:focus {
+    outline:none;
+}
+
 /*
  * Header styles
  */
